tests/syntax_errors/sasha5_2.tl
"hello"
"967dhgs78lkc"
"hey\n"
"abc\t\t\t def\n k"
"\234\000\024\t"
"\\\"aa\t"
" "
"'"
"\""
"\t"
"\n"
"\\"
""
",,sdj"
"1"
"Ahoj\n\"Sve'te \\\034"
"\001"
"abcdefghijklmnopqrstuvwxyz"
"0123456789"
"10sjwre"
"000"
"a"
"ab.23"
"-321.3"
"20.3"
"#@$!^*(&"
"'"
"\th"
"erf\t"
"\t"
"\nt"
"abc\n"
"\n"
"|"
"\\"
"das\\sdas"
"\""
"tr\"akd"
"a\tb\nc\"d\\e"
"\001"
"\002\255\201"
" "
""
"."
";"
"loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong striiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiing"
"                           "
"xd                                            8374"
